# OpenGL-Gizmos

./: .gitignore  .gitmodules  CMakeLists.txt
src/: Base.h  Buffer.cpp  Buffer.h  Gizmo.cpp  Gizmo.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  OpenGLUtil.cpp  OpenGLUtil.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  main.cpp  shaderprogram.cpp  shaderprogram.h
src/shaders/: f_default.glsl  f_texture.glsl  v_default.glsl  v_texture.glsl
